fix spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
   
   #welcome-section{
     box-sizing:border-box;
-    height:100vh;
+    height:20vh;
     margin:100px;
     padding:0px;
   }
